fix horizontal scroll in mobile

--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ a {
 body, html {
     height: 100%;
     margin: 0;
+    overflow-x: hidden;
 
     font-size: 16px;
     font-family: "IBM Plex Mono", monospace;
